# eye-fi-service-integration

./: .gitignore  LICENSE  README.md  eyefi-ha-integration-brief.md  pyproject.toml
custom_components/eyefi/: __init__.py  camera.py  config_flow.py  const.py  manifest.json  services.yaml
custom_components/eyefi/translations/: en.json
custom_components/wifi_geolocation/: __init__.py  _selector_patch.py  config_flow.py  const.py  manifest.json  services.yaml
docs/: apple-ecosystem-setup.md
docs/upstream-reorder-selector-pr/: PR_DESCRIPTION.md  README.md  core-selector.patch  core-tests.patch  docs-selectors.patch
eyefi_core/: __init__.py  backfill.py  events.py  geotag.py  protocol.py  soap_server.py  tar_extract.py
eyefi_core/storage/: __init__.py  apple_dropfolder.py  backblaze.py  google_photos.py  local_nas.py  onedrive.py  pcloud.py  remote_nas.py  smugmug.py
tests/custom_components/: _ha_stub.py  test_config_flow_schemas.py  test_wifi_geolocation_config_flow_schemas.py  test_wifi_geolocation_selector_patch.py
tests/eyefi_core/: test_backfill.py  test_geotag.py  test_protocol.py  test_tar_extract.py
tests/wifi_geolocation_core/: _fakes.py  test_cooldown.py  test_fallback.py  test_here.py  test_ichnaea_family.py  test_models.py  test_unwired_labs.py  test_wifidb.py  test_wigle.py
wifi_geolocation/: README.md  pyproject.toml
wifi_geolocation/wifi_geolocation_core/: __init__.py  beacondb.py  combain.py  cooldown.py  fallback.py  google.py  here.py  ichnaea_compatible.py  models.py  mozilla.py  unwired_labs.py  wifidb.py  wigle.py
(+1 files in other folders)
