[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eyefi-core"
version = "0.1.0"
description = "Async, framework-agnostic Eye-Fi card upload server: SOAP protocol, geotagging, and pluggable storage backends"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "piexif>=1.1.3",
]

[project.optional-dependencies]
remote_nas = ["smbprotocol>=1.13", "asyncssh>=2.14"]
onedrive = []
smugmug = ["requests-oauthlib>=1.3"]
pcloud = []
dev = ["pytest", "pytest-asyncio", "pillow", "voluptuous", "voluptuous-serialize"]

[tool.setuptools.packages.find]
include = ["eyefi_core*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
